# ZIOVPO_PRACTICES

./: .gitignore  Antivirus.slnx  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
Antivirus/: Antivirus.cpp  Antivirus.rc  Antivirus.vcxproj  Resource.h  UserDesktopSession.cpp  UserDesktopSession.h  UserIsolatedStopConfirmation.cpp  UserIsolatedStopConfirmation.h  framework.h
AntivirusService/: AntivirusDatabaseUpdater.cpp  AntivirusDatabaseUpdater.h  AntivirusEngineSelfTest.cpp  AntivirusEngineSelfTest.h  AntivirusScanService.cpp  AntivirusScanService.h  AntivirusService.vcxproj  service.cpp
Installer/: Bundle.wxs  Product.wxs  README.md  TrayBundle.wixproj  TrayInstaller.wixproj
Installer/scripts/: collect-artifacts.ps1  verify-install.ps1
Shared/: AntivirusDatabaseStorage.cpp  AntivirusDatabaseStorage.h  AntivirusEngine.cpp  AntivirusEngine.h  AntivirusRpcControl.idl  ProcessProtection.cpp  ProcessProtection.h  ServiceCommon.h  ServiceProtection.cpp  ServiceProtection.h  WebApiIntegration.h
Shared/MidlCompat/: rpc.idl  rpcndr.idl
